--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
     "autoprefixer": "10.4.20",
+    "daisyui": "^4.12.23",
     "eslint": "8.57.1",
     "eslint-config-next": "15.1.3",
+    "fast-sort": "^3.4.1",
     "next": "13.5.8",
     "postcss": "8.4.49",
     "react": "19.0.0",
