--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
     "autoprefixer": "10.4.20",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "daisyui": "^4.12.23",
     "eslint": "8.57.1",
     "eslint-config-next": "15.1.3",
     "fast-sort": "^3.4.1",
+    "lucide-react": "^0.469.0",
     "next": "13.5.8",
     "postcss": "8.4.49",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.4.17",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.7.2"
   }
 }
