--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "eslint-config-next": "15.1.3",
     "fast-sort": "^3.4.1",
     "lucide-react": "^0.469.0",
-    "next": "13.5.8",
+    "next": "^15.1.3",
     "postcss": "8.4.49",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "prisma": "^5.22.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "^1.0.7",
