--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "fast-sort": "^3.4.1",
     "lucide-react": "^0.469.0",
     "next": "^15.1.3",
+    "next-auth": "^4.24.11",
+    "next-cloudinary": "^6.16.0",
     "postcss": "8.4.49",
     "prisma": "^5.22.0",
     "react": "^19.0.0",
