--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "preview-email": "email dev -p 3030"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-slot": "^1.1.1",
+    "@react-email/components": "^0.0.32",
+    "@react-email/render": "^1.0.4",
     "@types/node": "22.10.5",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
     "autoprefixer": "10.4.20",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "daisyui": "^4.12.23",
@@ -22,17 +27,22 @@
     "eslint-config-next": "15.1.3",
     "fast-sort": "^3.4.1",
     "lucide-react": "^0.469.0",
-    "next": "^15.1.3",
+    "next": "^13.5.6",
     "next-auth": "^4.24.11",
     "next-cloudinary": "^6.16.0",
     "postcss": "8.4.49",
     "prisma": "^5.22.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-email": "^3.0.6",
+    "resend": "^4.1.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.7.2",
     "zod": "^3.24.1"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2"
   }
 }
